@@ -3,6 +3,8 @@
                               KijiSchema Release Notes
 
 Version 1.3.0
+  * SCHEMA-547. AtomicKijiPutter.checkAndCommit() can check for the
+      non-existence of a cell.
   * SCHEMA-515. Exposes table and data request in HBaseKijiRowData.
   * SCHEMA-485. Adds profiling pointcuts for HBase reads/writes.
   * SCHEMA-514. DeleteTool correctly formats the delete confirmation message
